--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,27 +10,19 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # Banco de dados local
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.3
-  
-  # Gestão de estado e preferências
   provider: ^6.1.2
   shared_preferences: ^2.2.3
-
-  # Utilitários de UI e formatação
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
   flutter_colorpicker: ^1.1.0
   timeago: ^3.6.1
-
-  # Funcionalidade Premium: PDF
   pdf: ^3.10.8
   printing: ^5.11.1
-  
-  # Funcionalidade Premium: Gráficos (Versão correta e estável)
   fl_chart: ^0.68.0
+  flutter_svg: ^2.0.10+1 # <-- ADICIONE ESTA LINHA
 
 dev_dependencies:
   flutter_test:
@@ -40,10 +32,11 @@ dev_dependencies:
   hive_generator: ^2.0.1
   flutter_lints: ^4.0.0
 
-# Secção específica do Flutter
 flutter:
   uses-material-design: true
   
   assets:
+    # --- ATUALIZE ESTA SECÇÃO ---
     - assets/icon/icon.png
+    - assets/icon/icon.svg 
 
