--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   printing: ^5.11.1
   fl_chart: ^0.68.0
   flutter_svg: ^2.0.10+1 # <-- ADICIONE ESTA LINHA
+  file_picker: ^8.0.0+1 # <-- ADICIONE ESTA LINHA
 
 dev_dependencies:
   flutter_test:
